serves\feat(infra): #3085.1 user provision skeleton
- Add provisioners, jobs, and basic terraform code


Former-commit-id: 87496f61cd3410dd8098bcb9e63f0287ffa0ea88

--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -108,6 +108,16 @@ serves_test_user_provision_integrates_prod:
   <<: *serves_in_dev_branch
   stage: test-infra
 
+serves_test_user_provision_skims_dev:
+  <<: *with_nix
+  <<: *serves_in_dev_branch
+  stage: test-infra
+
+serves_test_user_provision_skims_prod:
+  <<: *with_nix
+  <<: *serves_in_dev_branch
+  stage: test-infra
+
 serves_test_user_provision_web_dev:
   <<: *with_nix
   <<: *serves_in_dev_branch
@@ -199,6 +209,16 @@ serves_apply_user_provision_integrates_dev:
   stage: deploy-infra
 
 serves_apply_user_provision_integrates_prod:
+  <<: *with_nix
+  <<: *serves_in_master_branch
+  stage: deploy-infra
+
+serves_apply_user_provision_skims_dev:
+  <<: *with_nix
+  <<: *serves_in_master_branch
+  stage: deploy-infra
+
+serves_apply_user_provision_skims_prod:
   <<: *with_nix
   <<: *serves_in_master_branch
   stage: deploy-infra
