skims\feat(infra): #3085.6 kms keys
Former-commit-id: c25b0ce1b3e61e5a7e89b541f946dfb42b9728c0

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -147,7 +147,7 @@ common_sonarcloud_check:
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
   cache:
-    key: "${CI_COMMIT_REF_NAME}-${CI_JOB_NAME}"
+    key: ${CI_COMMIT_REF_SLUG}
     paths:
       - .sonar/cache
   script:
