common\feat(build): #3092.1 add docker image
Former-commit-id: d3bf24022fe388609f9bf7187169f9ce0c90d35a

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,6 +89,11 @@ common_build_nix_caches:
     refs: [schedules]
     variables: [$common_build_nix_caches]
 
+common_common_deploy_container_image:
+  <<: *with_nix
+  <<: *common_in_master_branch
+  stage: deploy-app
+
 common_lint_build_system:
   <<: *with_nix
   <<: *common_in_dev_and_master_branch
