--- a/integrates/deploy/containers/app/requirements.txt
+++ b/integrates/deploy/containers/app/requirements.txt
@@ -13,6 +13,7 @@ bugsnag==3.6.1
 channels==2.4.0
 cloudmersive_virus_api_client==2.0.6
 cryptography==2.9.2
+jwcrypto==0.8
 django==3.0.7
 django-analytical==2.6.0
 django-crontab==0.7.1
