--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -472,6 +472,16 @@ integrates_infra_ephemeral_test:
   <<: *in_dev_and_master_branch_integrates
   stage: test-infra
 
+integrates_infra_firewall_deploy:
+  <<: *with_nix
+  <<: *in_master_branch_integrates
+  stage: deploy-infra
+
+integrates_infra_firewall_test:
+  <<: *with_nix
+  <<: *in_dev_and_master_branch_integrates
+  stage: test-infra
+
 integrates_lint_back:
   <<: *with_nix
   <<: *in_dev_and_master_branch_integrates
