integrates\refac(front): #2705.1 update addfilesmodal
- Lint addfilesmodal spec file


Former-commit-id: 7f1f7e41e399eba0efff2cdfad1b20611e013964

--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -7,5 +7,6 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/components/APITokenModal/**
 !src/scenes/Dashboard/components/AddEnvironmentsModal/**
 !src/scenes/Dashboard/components/NewsWidget/**
+!src/scenes/Dashboard/components/AddFilesModal/index.spec.tsx
 src/**/*.css.d.ts
 src/**/*.d.ts
