--- a/integrates/deploy/production/ingress.yaml
+++ b/integrates/deploy/production/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/certificate-arn: __PRODUCTION_CERTIFICATE_ARN__
+    alb.ingress.kubernetes.io/wafv2-acl-arn: __FIREWALL_ACL_ARN__
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
 spec:
