observes\feat(cross): #3074.2 observes repo clone job alter
Former-commit-id: 2d4d9a6b435bf1c5e23453b8e7a33d515f4a4c71

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -207,3 +207,13 @@ observes_services_repositories_cache:
     refs: [schedules]
     variables: [$observes_services_repositories_cache]
   interruptible: false
+
+observes_services_repositories_cache_new:
+  <<: *with_nix
+  tags: [autoscaling-large]
+  stage: analytics
+  parallel: 10
+  only:
+    refs: [schedules]
+    variables: [$observes_services_repositories_cache_new]
+  interruptible: false
