skims\feat(job): #3089.9 submit all groups to batch
- Add a for loop to send them all, add a schedule that
  triggers the submission


Former-commit-id: 4f468934ebcbe82a4e20e4da61dbb0e949c2496a

--- a/skims/.gitlab-ci.yml
+++ b/skims/.gitlab-ci.yml
@@ -66,6 +66,15 @@ skims_lint:
   <<: *skims_in_dev_and_master_branch
   stage: lint-code
 
+skims_process_all_groups_on_aws:
+  <<: *with_nix
+  interruptible: false
+  only:
+    refs: [schedules]
+    variables: [$skims_process_all_groups_on_aws]
+  stage: scheduler
+  tags: [autoscaling]
+
 skims_security:
   <<: *with_nix
   <<: *skims_in_dev_and_master_branch
