skims\feat(back): #2975.256 reformat statements
- It's easier to design checks if they follow an standard
  format, otherwise we're going to clutter checks with formatting
  code


Former-commit-id: d2cebf237e19f21a61d703feaf83967e0b68bcc5

--- a/skims/test/data/parse_cfn/full.yaml
+++ b/skims/test/data/parse_cfn/full.yaml
@@ -78,6 +78,9 @@ Resources:
                 Condition:
                   StringNotEquals:
                     aws:RequestedRegion: us-east-1
-              - Effect: Allow
-                Action: sts:AssumeRole
-                Resource: arn:aws:iam::*:role/cloud-lambda
+        - PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              Effect: Allow
+              Action: sts:AssumeRole
+              Resource: arn:aws:iam::*:role/cloud-lambda
