forces\fix(front): #197.24 configure bugsnag metadata
- use aioextensions
- configure environment


Former-commit-id: 214f8dafe7b2945c6fc13070b2f27c618b594bcb

--- a/forces/pyproject.toml
+++ b/forces/pyproject.toml
@@ -23,6 +23,7 @@ pytz = "2020.1"
 bugsnag = "3.7.1"
 aiogqlc = "2.0.0b1"
 more-itertools = "8.5.0"
+aioextensions = "20.8.2087641"
 
 [tool.poetry.dev-dependencies]
 prospector = "1.2.0"
