--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -22,6 +22,7 @@ include = [
 license = "MPL-2.0"
 name = "skims"
 packages = [
+  { include = "aws", from = "skims" },
   { include = "cli", from = "skims" },
   { include = "config", from = "skims" },
   { include = "core", from = "skims" },
