--- a/integrates/deploy/production/ingress.yaml
+++ b/integrates/deploy/production/ingress.yaml
@@ -6,10 +6,11 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/certificate-arn: __PRODUCTION_CERTIFICATE_ARN__
-    alb.ingress.kubernetes.io/wafv2-acl-arn: __FIREWALL_ACL_ARN__
+    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=180
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+    alb.ingress.kubernetes.io/certificate-arn: __PRODUCTION_CERTIFICATE_ARN__
+    alb.ingress.kubernetes.io/wafv2-acl-arn: __FIREWALL_ACL_ARN__
 spec:
   rules:
     - host: integrates.fluidattacks.com
