skims\fix(back): #2975.260 cumulative fixes
- Rename the Dockerfile entrypoint to something
  different than product so skims recognize the
  environment as production
- Adding 1 to the line in the yaml corrects the line
  number due to a glitch in the third party library
- Handle multi-node yaml files, add a regression test
- Allow yaml to load dates, add a regression test
- Allow json to load booleans and null values,
  add a regression test


Former-commit-id: d25ead73cffadb8d0e2d63691a923ddd480e9f81

--- a/skims/test/data/parse_cfn/1.yaml
+++ b/skims/test/data/parse_cfn/1.yaml
@@ -1,5 +1,5 @@
 ---
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: 2010-09-09
 Description: test
 Parameters:
 
@@ -17,3 +17,5 @@ Resources:
       Tags:
         - Key: Name
           Value: !Join ["", [!Ref 'AWS::StackName' , "-option-group"]]
+      X: true
+      Y: null
