--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -6,6 +6,7 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/*.*
 !src/scenes/Dashboard/components/APITokenModal/**
 !src/scenes/Dashboard/components/AddEnvironmentsModal/**
+!src/scenes/Dashboard/components/AddOrganizationModal/index.tsx
 !src/scenes/Dashboard/components/NewsWidget/**
 !src/scenes/Dashboard/components/AddFilesModal/**
 src/**/*.css.d.ts
