skims\feat(back): #2975.262 roles trust policies
- Added referenes and tests
- Some market tools use a lot of rules for what to us is 1 finding


Former-commit-id: 095da6c2b955e34bdd1eb9c9aed857b4cc88837a

--- a/skims/test/data/lib_path/f031_aws/cfn_negative_statement.yaml
+++ b/skims/test/data/lib_path/f031_aws/cfn_negative_statement.yaml
@@ -21,4 +21,20 @@ Resources:
           - Effect: Allow
             NotAction: s3:ListBucket
             NotResource: "something"
+
+  AWS_IAM_Role_1:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - sts:AssumeRole
+          - Effect: Allow
+            NotAction: s3:ListBucket
+            NotResource: "something"
+
 ---
