--- a/serves/infrastructure/eks/manifests/ingress/autonomic.yaml
+++ b/serves/infrastructure/eks/manifests/ingress/autonomic.yaml
@@ -26,9 +26,9 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/server-alias: autonomicmind.co
-    nginx.ingress.kubernetes.io/upstream-vhost: "fluidsignal.formstack.com"
+    nginx.ingress.kubernetes.io/upstream-vhost: "fluidattacks.formstack.com"
     nginx.ingress.kubernetes.io/server-snippet: |
-      proxy_ssl_name fluidsignal.formstack.com;
+      proxy_ssl_name fluidattacks.formstack.com;
       proxy_ssl_server_name on;
 spec:
   tls:
