--- a/serves/infrastructure/eks/manifests/ingress/external.yaml
+++ b/serves/infrastructure/eks/manifests/ingress/external.yaml
@@ -137,7 +137,7 @@ metadata:
   namespace: serves
 spec:
   type: ExternalName
-  externalName: fluidsignal.formstack.com
+  externalName: fluidattacks.formstack.com
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
@@ -148,9 +148,9 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
     nginx.ingress.kubernetes.io/server-snippet: |
-      proxy_ssl_name fluidsignal.formstack.com;
+      proxy_ssl_name fluidattacks.formstack.com;
       proxy_ssl_server_name on;
-    nginx.ingress.kubernetes.io/upstream-vhost: fluidsignal.formstack.com
+    nginx.ingress.kubernetes.io/upstream-vhost: fluidattacks.formstack.com
 
 spec:
   tls:
