--- a/melts/.gitlab-ci.yml
+++ b/melts/.gitlab-ci.yml
@@ -32,6 +32,16 @@
       when: never
     - if: *melts_commit_pattern
 
+.test_toolbox_template: &test_toolbox_template
+  <<: *with_nix
+  stage: test-code
+  variables:
+    SERVICES: s3
+    HOSTNAME_EXTERNAL: localstack
+  services:
+    - name: localstack/localstack
+      alias: localstack
+
 melts_lint_code:
   <<: *with_nix
   <<: *in_dev_branch_melts
@@ -40,6 +50,7 @@ melts_lint_code:
 melts_test:
   <<: *with_nix
   <<: *in_dev_branch_melts
+  <<: *test_toolbox_template
   stage: test-code
 
 melts_deploy:
