melts\feat(back): #3098.2 add compute and snapshot
- add compute and snapshot bill
- change job name


Former-commit-id: c214a2487ee9db4ae29198ca47ca1b4eccbb42e1

--- a/melts/.gitlab-ci.yml
+++ b/melts/.gitlab-ci.yml
@@ -32,7 +32,7 @@
       when: never
     - if: *melts_commit_pattern
 
-.test_toolbox_template: &test_toolbox_template
+.test_melts_template: &test_melts_template
   <<: *with_nix
   stage: test-code
   variables:
@@ -50,7 +50,7 @@ melts_lint_code:
 melts_test:
   <<: *with_nix
   <<: *in_dev_branch_melts
-  <<: *test_toolbox_template
+  <<: *test_melts_template
   stage: test-code
 
 melts_deploy:
