--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -52,12 +52,13 @@ click = "7.1.2"
 confuse = "1.3.0"
 frozendict = "1.2"
 jmespath = "0.10.0"
-lark-parser = "0.9.0"
+lark-parser = "0.7.8"
 more-itertools = "8.4.0"
 oyaml = "0.9"
 pillow = "7.2.0"
 pyparsing = "2.4.7"
 python = "^3.8"
+python-hcl2 = "0.3.0"
 requests = "2.24.0"
 "ruamel.yaml" = "0.16.10"
 semver = "2.10.2"
