skims\test(back): #2975.269 hcl2 loader
Former-commit-id: 1ecddd7056d97f610aa0e39ddefb641f8dd4996c

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -31,6 +31,7 @@ packages = [
   { include = "nvd", from = "skims" },
   { include = "parse_cfn", from = "skims" },
   { include = "parse_grammar", from = "skims" },
+  { include = "parse_hcl2", from = "skims" },
   { include = "parse_json", from = "skims" },
   { include = "serialization", from = "skims" },
   { include = "state", from = "skims" },
