integrates\refac(back): #159.8 improve api structure
- mutations and queries are types
- decouple organization types and mappings
- organize resolvers by type


Former-commit-id: fa0402ab677e9263d6dce988f2972f942719ebb6

--- a/integrates/django-apps/integrates-back-async/MANIFEST.in
+++ b/integrates/django-apps/integrates-back-async/MANIFEST.in
@@ -2,4 +2,5 @@ include LICENSE
 include README.rst
 include backend/entity/schema.yaml
 include backend/api/schema/**/*.graphql
+include backend/api/schema/types/**/*.graphql
 include backend/domain/vuln_template.yaml
