--- a/integrates/django-apps/integrates-back-async/MANIFEST.in
+++ b/integrates/django-apps/integrates-back-async/MANIFEST.in
@@ -4,3 +4,4 @@ include backend/entity/schema.yaml
 include backend/api/schema/**/*.graphql
 include backend/api/schema/types/**/*.graphql
 include backend/domain/vuln_template.yaml
+include backend/reports/resources/themes/logo.png
