serves\feat(cross): #3118.1 add compute service
- Add build system, basic terraform code and jobs


Former-commit-id: 38b1adaf3221dc3c7936cb3def60dce5035d1e21

--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -53,6 +53,11 @@ serves_test_infra_autoscaling_ci:
   <<: *serves_in_dev_branch
   stage: test-infra
 
+serves_test_infra_compute:
+  <<: *with_nix
+  <<: *serves_in_dev_branch
+  stage: test-infra
+
 serves_test_infra_dns:
   <<: *with_nix
   <<: *serves_in_dev_branch
@@ -149,6 +154,11 @@ serves_apply_infra_monolith:
   stage: deploy-infra
 
 serves_apply_infra_autoscaling_ci:
+  <<: *with_nix
+  <<: *serves_in_master_branch
+  stage: deploy-infra
+
+serves_apply_infra_compute:
   <<: *with_nix
   <<: *serves_in_master_branch
   stage: deploy-infra
