serves\feat(infra): #3118.3 add batch
Former-commit-id: 826d6203285f40d529905b7869d5988690797251

--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -58,7 +58,7 @@ serves_test_infra_compute:
   <<: *serves_in_dev_branch
   stage: test-infra
 
-serves_test_infra_dns:
+.serves_test_infra_dns:
   <<: *with_nix
   <<: *serves_in_dev_branch
   stage: test-infra
