integrates\refac(front): #2705.7 update addprojectmodal
- Lint addprojectmodal spec tsx


Former-commit-id: 02c6a437d7fd3d8da0ffd606d86826e0c6d5b071

--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -7,6 +7,9 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/components/APITokenModal/**
 !src/scenes/Dashboard/components/AddEnvironmentsModal/**
 !src/scenes/Dashboard/components/AddOrganizationModal/**
+!src/scenes/Dashboard/components/AddProjectModal/index.spec.tsx
+!src/scenes/Dashboard/components/AddProjectModal/types.ts
+!src/scenes/Dashboard/components/AddProjectModal/queries.ts
 !src/scenes/Dashboard/components/NewsWidget/**
 !src/scenes/Dashboard/components/AddFilesModal/**
 src/**/*.css.d.ts
