--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
+  - local: airs/.gitlab-ci.yml
   - local: asserts/.gitlab-ci.yml
   - local: forces/.gitlab-ci.yml
   - local: integrates/.gitlab-ci.yml
