airs\feat(build): #3228.9 test jobs
- Prepare test jobs
- Prepare provisioners
- Adapt precommit
- Rename some helpers
- Other minor changes


Former-commit-id: f2b7296a7564093a60ce421c2f43b81ce06a84a7

--- a/airs/.gitlab-ci.yml
+++ b/airs/.gitlab-ci.yml
@@ -69,3 +69,28 @@ airs_infra_secret_management_apply:
   <<: *with_nix
   <<: *in_master_branch_airs
   stage: deploy-infra
+
+airs_test_lint_code:
+  <<: *with_nix
+  <<: *in_dev_branch_airs
+  stage: test-code
+
+airs_test_images:
+  <<: *with_nix
+  <<: *in_dev_branch_airs
+  stage: test-code
+
+airs_test_generic:
+  <<: *with_nix
+  <<: *in_dev_branch_airs
+  stage: test-code
+
+airs_test_blog:
+  <<: *with_nix
+  <<: *in_dev_branch_airs
+  stage: test-code
+
+airs_test_defends:
+  <<: *with_nix
+  <<: *in_dev_branch_airs
+  stage: test-code
