--- a/airs/.pre-commit-config.yaml
+++ b/airs/.pre-commit-config.yaml
@@ -6,25 +6,25 @@ repos:
     name: shellcheck
     entry: shellcheck
     language: system
-    files: \.(sh)$
+    files: airs\/.*\.(sh)$
     args: [ "--external-sources", "--exclude=SC1090,SC2016,SC2153,SC2154" ]
   - id: pylint
     name: pylint
     entry: pylint
     language: system
-    files: \.(py)$
+    files: airs\/.*\.(py)$
     args: [ "--ignore-imports=yes", "--disable=similarities" ]
     exclude: ^.*pelicanconf.py
   - id: flake8
     name: flake8
     entry: flake8
     language: system
-    files: \.(py)$
+    files: airs\/.*\.(py)$
     args: []
   - id: tidy
     name: tidy
     entry: tidy
     language: system
-    files: \.(html)$
+    files: airs\/.*\.(html)$
     args: ["-q"]
     exclude: ^.*/templates/
