airs\refac(build): #3128.11 cache
- Move cache to airs folder
- Simplify readme


Former-commit-id: 8aa6ac7c6746367bcf1ef18bed87769b88c2179c

--- a/airs/.gitlab-ci.yml
+++ b/airs/.gitlab-ci.yml
@@ -106,8 +106,8 @@ airs_deploy_ephemeral:
   cache:
     key: "${CI_COMMIT_REF_NAME}-${CI_JOB_NAME}"
     paths:
-    - cache/
-    - new/cache/
+    - airs/cache/
+    - airs/new/cache/
 
 airs_deploy_stop_ephemeral:
   <<: *with_nix
