airs\feat(conf): #3335 added oprado as codeowner
- Added myself as codeowner to the airs product


Former-commit-id: 137a16500fedde78c8a5d16469cfcbf0fb14f9bb

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -22,4 +22,5 @@
 /observes/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
 /skims/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid @ralvarezatfluid
 /sorts/ @jrestrepoatfluid @kamadoatfluid @acuberosatfluid
+/airs/ @opradoatfluid
 /.gitlab* @drestrepoatfluid @dsalazaratfluid @jrestrepoatfluid @kamadoatfluid @ralvarezatfluid
