airs\feat(conf): #3335.2 add airs codeowners
Former-commit-id: bf42c011477a01d8046957cad4e871ae12576f2f

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -22,5 +22,5 @@
 /observes/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
 /skims/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid @ralvarezatfluid
 /sorts/ @jrestrepoatfluid @kamadoatfluid @acuberosatfluid
-/airs/ @opradoatfluid
+/airs/ @opradoatfluid @jrestrepoatfluid @kamadoatfluid @ralvarezatfluid
 /.gitlab* @drestrepoatfluid @dsalazaratfluid @jrestrepoatfluid @kamadoatfluid @ralvarezatfluid
