--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -153,7 +153,7 @@ common_sonarcloud_check:
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
   cache:
-    key: ${CI_COMMIT_REF_SLUG}
+    key: ${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}
     paths:
       - .sonar/cache
   script:
