skims\feat(back): #3325.5 alias objects
- Alias terraform objects to IAM objects
- Add the default value for Effect
- Add tests and a new vuln due to the enhanced parser


Former-commit-id: 3bab1bd361ae046d502c4f58c8b3a24fa6775e3f

--- a/skims/test/data/config/massive.yaml
+++ b/skims/test/data/config/massive.yaml
@@ -1,6 +1,19 @@
-chdir: ../../
+chdir: ../
 language: EN
 path:
   include:
     - glob(*)
-  exclude: []
+  exclude:
+    - glob(**/.git)
+    - glob(**/*.min.js)
+    - glob(**/*bootstrap*)
+    - glob(**/*cordova*)
+    - glob(**/*dynatrace*)
+    - glob(**/*ibmmfpf.js*)
+    - glob(**/*jquery*)
+    - glob(**/*sjcl*)
+    - glob(**/cryptojs/components/core.js)
+    - glob(**/modernizr.js)
+    - glob(**/test)
+    - glob(**/UI/AutocompleteGenerico)
+    - glob(**/UI/Tabs)
