skims\fix(back): #3344.1 filter principals and conditions
- Add a basic filter that assumes that if principals or
  conditions are present we can't make assertions about
  the permissition level of the policy
- Add regression tests


Former-commit-id: 474c3ef9943919177ccbb4f5d27b0749a9578fb4

--- a/skims/test/data/lib_path/f031_aws/cfn_permissive_policy.yaml
+++ b/skims/test/data/lib_path/f031_aws/cfn_permissive_policy.yaml
@@ -36,3 +36,8 @@ Resources:
               - autoscaling:*
               - eks:*
             Resource: '*'
+          - Effect: Allow
+            Principal:
+              AWS: arn:aws:iam:::root
+            Action: kms:*
+            Resource: "*"
