asserts\feat(infra): #3345.2 s3 sync
- Rename pages job to asserts_documentation
- Fix sphinx doc generation
- Rename public/ to output/
- Add awscli to provisioner


Former-commit-id: 062915e0e4b91491e593573ef463f109d660e37f

--- a/asserts/.gitlab-ci.yml
+++ b/asserts/.gitlab-ci.yml
@@ -281,9 +281,7 @@ asserts_release_docker_hub:
   stage: deploy-app
   needs: [asserts_release_pypi]
 
-pages:
+asserts_documentation:
   <<: *with_nix
   <<: *in_master_branch_asserts
   stage: deploy-app
-  artifacts:
-    paths: [asserts/public/]
