--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -8,6 +8,7 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/components/AddEnvironmentsModal/**
 !src/scenes/Dashboard/components/AddOrganizationModal/**
 !src/scenes/Dashboard/components/AddProjectModal/**
+!src/scenes/Dashboard/components/AddRepositoriesModal/index.spec.tsx
 !src/scenes/Dashboard/components/NewsWidget/**
 !src/scenes/Dashboard/components/AddFilesModal/**
 src/**/*.css.d.ts
