skims\feat(back): #3353.2 insecure cipher suite
- Temporarily hard code the iana names, I'll improve it soon
- Refactor the .properties parser


Former-commit-id: 27da56ea6cfdebe5f1e35861a354b3dbf5164556

--- a/skims/test/data/lib_path/f052/java.properties
+++ b/skims/test/data/lib_path/f052/java.properties
@@ -3,3 +3,5 @@ ibm.mq.use_ssl=false
  ibm.mq.use_ssl = false
  ibm.mq.use_ssl = false # comment
 ibm.mq.use_ssl=#{imb_mq_use_ssl}#
+ibm.mq.cipher.suite=TLS_RSA_WITH_AES_128_CBC_SHA256
+ibm.mq.cipher.suite=X
