--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -32,6 +32,7 @@ packages = [
   { include = "parse_cfn", from = "skims" },
   { include = "parse_grammar", from = "skims" },
   { include = "parse_hcl2", from = "skims" },
+  { include = "parse_java_properties", from = "skims"},
   { include = "parse_json", from = "skims" },
   { include = "serialization", from = "skims" },
   { include = "state", from = "skims" },
