airs\refac(back): #3359.3 remove subfolder
- Remove subfolder from compialtion
and pelican configurations
- Other minor changes


Former-commit-id: 23fa1f90ccca599346a5e44768d4c8801a4c37c8

--- a/airs/.gitlab-ci.yml
+++ b/airs/.gitlab-ci.yml
@@ -101,7 +101,7 @@ airs_deploy_ephemeral:
   stage: deploy-app
   environment:
     name: ephemeral/${CI_COMMIT_REF_NAME}
-    url: https://web.eph.fluidattacks.com/${CI_COMMIT_REF_NAME}/web/
+    url: https://web.eph.fluidattacks.com/${CI_COMMIT_REF_NAME}/
     on_stop: airs_deploy_stop_ephemeral
   cache:
     key: ${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}
