skims\feat(back): #3366.2 sensible info in props
Former-commit-id: 1775c0ec9dc63ac3200b4de3fecc02064c72c9a8

--- a/skims/test/data/lib_path/f009/java.properties
+++ b/skims/test/data/lib_path/f009/java.properties
@@ -2,3 +2,10 @@ mbda.credentials2.key       = AKIA0000000000000000
 azon.aws.accesskey          = AKIA0000000000000000
 azon.aws.accesskey          = #{aws_access_key}#
 azon.aws.accesskey          = #AKIA0000000000000000
+
+# find . -wholename '*.properties' -type f -exec cat {} + | grep password | sort | uniq -c | sort -n
+
+sonar.password = 123
+sonar.password = ENC(something-base64-encoded-but-encrypted)
+sonar.password = ${env_var}
+sonar.password = #{unknown_tool_trick}#
