observes\feat(job): #3370 upload forces data to dynamo
Former-commit-id: 78c8e44d3b3b369b47c919dbb6017c214b88d37f

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -71,6 +71,15 @@ observes_dynamodb:
     variables: [$observes_dynamodb]
   interruptible: false
 
+observes_dynamodb_forces:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$observes_dynamodb_forces]
+  interruptible: false
+
 observes_services_toe:
   <<: *with_nix
   tags: [autoscaling-analytics]
