observes\refac(job): #3374.2 abstract common functions
Former-commit-id: 1f1e46943acbd691a44e9f19caf469c6d6c62368

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -164,11 +164,11 @@ observes_git_upload:
     variables: [$observes_git_upload]
   interruptible: false
 
-observes_code:
+observes_code_upload:
   <<: *with_nix_serial
   only:
     refs: [schedules]
-    variables: [$observes_code]
+    variables: [$observes_code_upload]
   stage: analytics
   tags: [autoscaling-large]
   interruptible: false
