observes\refac(back): #3323.3 extractor
- tap gitlab extractor refac
- new dependencies


Former-commit-id: c5b7c67199674d5e117dcad9e152315665f220fc

--- a/observes/singer/tap_gitlab/pyproject.toml
+++ b/observes/singer/tap_gitlab/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Product Team <development@fluidattacks.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+aiohttp = "3.6.2"
+aioextensions = "20.8.2087641"
+asgiref = "3.2.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
