observes\feat(job): #3374.5 job and rm feature flag
Former-commit-id: 98a660d3a800c3b8a62b24575c7593345ed7307a

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -173,6 +173,15 @@ observes_code_upload:
   tags: [autoscaling-large]
   interruptible: false
 
+observes_code_ammend_authors:
+  <<: *with_nix_serial
+  only:
+    refs: [schedules]
+    variables: [$observes_code_ammend_authors]
+  stage: analytics
+  tags: [autoscaling-large]
+  interruptible: false
+
 observes_timedoctor_refresh_token:
   <<: *with_nix
   stage: analytics
