--- a/serves/services/autoscaling-ci/config.toml
+++ b/serves/services/autoscaling-ci/config.toml
@@ -45,7 +45,7 @@ check_interval = 20
       "amazonec2-access-key=__autoscaling_access_key__",
       "amazonec2-secret-key=__autoscaling_secret_key__",
       "amazonec2-region=us-east-1",
-      "amazonec2-tags=use,ci",
+      "amazonec2-tags=use,ci,management:type,production,management:product,common",
       "amazonec2-vpc-id=vpc-0ea1c7bd6be683d2d",
       "amazonec2-subnet-id=subnet-0bceb7aa2c900324a",
       "amazonec2-zone=a",
@@ -105,7 +105,7 @@ check_interval = 20
       "amazonec2-access-key=__autoscaling_access_key__",
       "amazonec2-secret-key=__autoscaling_secret_key__",
       "amazonec2-region=us-east-1",
-      "amazonec2-tags=use,ci",
+      "amazonec2-tags=use,ci,management:type,production,management:product,common",
       "amazonec2-vpc-id=vpc-0ea1c7bd6be683d2d",
       "amazonec2-subnet-id=subnet-0bceb7aa2c900324a",
       "amazonec2-zone=a",
@@ -166,7 +166,7 @@ check_interval = 20
       "amazonec2-access-key=__autoscaling_access_key__",
       "amazonec2-secret-key=__autoscaling_secret_key__",
       "amazonec2-region=us-east-1",
-      "amazonec2-tags=use,ci",
+      "amazonec2-tags=use,ci,management:type,production,management:product,common",
       "amazonec2-vpc-id=vpc-0ea1c7bd6be683d2d",
       "amazonec2-subnet-id=subnet-0bceb7aa2c900324a",
       "amazonec2-zone=a",
@@ -219,7 +219,7 @@ check_interval = 20
       "amazonec2-access-key=__autoscaling_access_key__",
       "amazonec2-secret-key=__autoscaling_secret_key__",
       "amazonec2-region=us-east-1",
-      "amazonec2-tags=use,ci",
+      "amazonec2-tags=use,ci,management:type,production,management:product,common",
       "amazonec2-vpc-id=vpc-0ea1c7bd6be683d2d",
       "amazonec2-subnet-id=subnet-0bceb7aa2c900324a",
       "amazonec2-zone=a",
