--- a/integrates/deploy/containers/app/requirements.txt
+++ b/integrates/deploy/containers/app/requirements.txt
@@ -54,6 +54,7 @@ redis-py-cluster==2.0.0
 retrying==1.3.3
 s3transfer==0.3.3
 simplejson==3.17.0
+starlette==0.13.8
 # This one cannot be updated
 social-auth-app-django==3.1.0
 tracers==20.7.1645
