skims\fix(job): #3402.1 avoid pristine
- Rename a path, and add a missing module to the
  config


Former-commit-id: bdd3dda2a868e52ae209f666b6c006ec41ffaf7b

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -30,6 +30,7 @@ packages = [
   { include = "lib_path", from = "skims" },
   { include = "nvd", from = "skims" },
   { include = "parse_cfn", from = "skims" },
+  { include = "parse_common", from = "skims" },
   { include = "parse_grammar", from = "skims" },
   { include = "parse_hcl2", from = "skims" },
   { include = "parse_java_properties", from = "skims"},
