--- a/integrates/front/package.json
+++ b/integrates/front/package.json
@@ -42,6 +42,7 @@
     "@types/redux-form": "8.2.3",
     "@types/revalidate": "1.1.2",
     "@types/sjcl": "1.0.29",
+    "@types/styled-components": "5.1.3",
     "@types/topojson-client": "3.0.0",
     "@types/webpack-bugsnag-plugins": "1.4.0",
     "@types/yargs": "15.0.5",
@@ -100,7 +101,9 @@
     "redux-form": "8.3.2",
     "revalidate": "1.2.0",
     "sjcl": "1.0.8",
+    "styled-components": "5.2.0",
     "subscriptions-transport-ws": "0.9.16",
+    "tachyons": "4.12.0",
     "topojson-client": "3.1.0",
     "yargs": "15.3.1"
   },
