observes\perf(job): #3406.2 query speed
- Limit the query to this year, and only commits without
  seet at
- Also copy data from the new data source because the inner
  join with the previous data source is small


Former-commit-id: 4a5674b39a08d7d5a1a8b404544353a56fd48ade

--- a/skims/.gitignore
+++ b/skims/.gitignore
@@ -20,4 +20,6 @@
 /static/parsers/antlr/gradle/wrapper
 /static/parsers/antlr/gradlew
 /static/parsers/antlr/src/main/java/parse/Java9*
+/static/parsers/babel/node_modules/
+/static/parsers/babel/package-lock.json
 /test/**/*.yaml.json
