--- a/melts/requirements.txt
+++ b/melts/requirements.txt
@@ -5,6 +5,7 @@ awscli==1.18.40
 binaryornot==0.4.4
 boto3==1.12.40
 botocore==1.15.40
+bugsnag==3.7.1
 click==7.1.2
 frozendict==1.2
 mypy_extensions==0.4.3
