--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -29,9 +29,9 @@ packages = [
   { include = "integrates", from = "skims" },
   { include = "lib_path", from = "skims" },
   { include = "nvd", from = "skims" },
+  { include = "parse_antlr", from = "skims" },
   { include = "parse_cfn", from = "skims" },
   { include = "parse_common", from = "skims" },
-  { include = "parse_grammar", from = "skims" },
   { include = "parse_hcl2", from = "skims" },
   { include = "parse_java_properties", from = "skims"},
   { include = "parse_json", from = "skims" },
