skims\feat(back): #3373.3 parsing backend
Former-commit-id: 6ad357bf930ba517b0ca4be317b4893491939396

--- a/skims/static/parsers/babel/package.json
+++ b/skims/static/parsers/babel/package.json
@@ -1,8 +1,7 @@
 {
   "author": "development@fluidattacks.com",
   "dependencies": {
-    "@babel/parser": "7.11.0",
-    "yargs": "16.0.3"
+    "@babel/parser": "7.11.0"
   },
   "description": "",
   "license": "MPL-2.0",
