skims\feat(back): #3414.1 antlr based csharp parser
- no-deltas-test


Former-commit-id: d39e093e9224669bcdcff7f86872a14caa7a2c99

--- a/skims/.gitignore
+++ b/skims/.gitignore
@@ -19,6 +19,7 @@
 /static/parsers/antlr/build/
 /static/parsers/antlr/gradle/wrapper
 /static/parsers/antlr/gradlew
+/static/parsers/antlr/src/main/java/parse/CSharp*
 /static/parsers/antlr/src/main/java/parse/Java9*
 /static/parsers/babel/node_modules/
 /static/parsers/babel/package-lock.json
