observes\feat(job): #3038.9 format all possible dates
Former-commit-id: 3f750046dc7a885571d3a60c3e5387ef1870eb75

--- a/observes/singer/tap_json/pyproject.toml
+++ b/observes/singer/tap_json/pyproject.toml
@@ -19,6 +19,7 @@ packages = [{ include = "tap_json", from = "." }]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+dateutils = "0.6.11"
 
 [tool.poetry.dev-dependencies]
 
