integrates\feat(build): #3399.9 files for alternate deploy
- For ephemeral envs only for now
- This will be used to deploy an alternate version of Integrates
using upcoming Starlette app


Former-commit-id: bdc8186dccbf7232404f29eb71422ee1b2653216

--- a/integrates/deploy/ephemeral/deployment2.yaml
+++ b/integrates/deploy/ephemeral/deployment2.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: integrates-__DEPLOYMENT_NAME__
+  name: integrates2-__DEPLOYMENT_NAME__
   namespace: ephemeral
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: integrates-__DEPLOYMENT_NAME__
+      app: integrates2-__DEPLOYMENT_NAME__
   template:
     metadata:
       labels:
-        app: integrates-__DEPLOYMENT_NAME__
+        app: integrates2-__DEPLOYMENT_NAME__
     spec:
       nodeSelector:
         worker_group: large
       containers:
-        - name: integrates
-          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
+        - name: integrates2
+          image: registry.gitlab.com/fluidattacks/product/app2:__DEPLOYMENT_NAME__
           imagePullPolicy: Always
           resources:
             requests:
@@ -31,7 +31,7 @@ spec:
               value: "__DATE__"
           envFrom:
             - secretRef:
-                name: integrates-__DEPLOYMENT_NAME__
+                name: integrates2-__DEPLOYMENT_NAME__
           ports:
             - containerPort: 8080
           readinessProbe:
