--- a/integrates/deploy/ephemeral/ingress.yaml
+++ b/integrates/deploy/ephemeral/ingress.yaml
@@ -22,7 +22,11 @@ spec:
           - path: /*
             backend:
               serviceName: ssl-redirect
-              servicePort: use-annotation
+              servicePort: use-annotation          
+          - path: /new/*
+            backend:
+              serviceName: integrates2-__DEPLOYMENT_NAME__
+              servicePort: 80
           - path: /*
             backend:
               serviceName: integrates-__DEPLOYMENT_NAME__
