--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -164,11 +164,11 @@ observes_git_upload:
     variables: [$observes_git_upload]
   interruptible: false
 
-observes_code_upload:
+observes_code_upload_all_groups_on_aws:
   <<: *with_nix_serial
   only:
     refs: [schedules]
-    variables: [$observes_code_upload]
+    variables: [$observes_code_upload_all_groups_on_aws]
   stage: analytics
   tags: [autoscaling-large]
   interruptible: false
