--- a/integrates/deploy/ephemeral/deployment2.yaml
+++ b/integrates/deploy/ephemeral/deployment2.yaml
@@ -21,11 +21,11 @@ spec:
           imagePullPolicy: Always
           resources:
             requests:
-              cpu: 500m
-              memory: 2Gi
+              cpu: 250m
+              memory: 512Mi
             limits:
-              cpu: 500m
-              memory: 2Gi
+              cpu: 250m
+              memory: 512Mi
           env:
             - name: DEPLOYMENT_DATE
               value: "__DATE__"
@@ -37,14 +37,14 @@ spec:
           readinessProbe:
             exec:
               command: [bash, deploy/ephemeral/integrates2-probes.sh, run_readiness_probe]
-            initialDelaySeconds: 60
+            initialDelaySeconds: 180
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 20
           livenessProbe:
             exec:
               command: [bash, deploy/ephemeral/integrates2-probes.sh, run_liveness_probe]
-            initialDelaySeconds: 60
+            initialDelaySeconds: 180
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 20
